data da day duoc vao db